--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tradingview",
-	"version": "9.2.1",
+	"version": "9.2.2",
 	"description": "ctx-core tradingview svelte library",
 	"keywords": [
 		"ctx-core",
@@ -21,6 +21,7 @@
 	"type": "module",
 	"files": [
 		"*.d.ts",
+		"*.json",
 		"./Chart_tradingview",
 		"./MarketOverview_tradingview",
 		"./MediumWidget_tradingview",
@@ -41,11 +42,11 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/array": "^27.0.1",
-		"@ctx-core/dom": "^15.1.1",
-		"@ctx-core/object": "^30.1.1",
-		"@ctx-core/uri": "^12.5.1",
-		"@ctx-core/uuid": "^8.2.1",
+		"@ctx-core/array": "^27.0.2",
+		"@ctx-core/dom": "^15.1.2",
+		"@ctx-core/object": "^30.1.2",
+		"@ctx-core/uri": "^12.5.2",
+		"@ctx-core/uuid": "^8.2.2",
 		"svelte": "^4.2.3"
 	},
 	"devDependencies": {
