--- a/package.json
+++ b/package.json
@@ -48,14 +48,14 @@
 		"disable:test:unit:coverage": "c8 pnpm test:unit"
 	},
 	"dependencies": {
-		"@ctx-core/dom": "^15.3.102",
-		"ctx-core": "^7.2.32",
-		"svelte": "^4.2.19"
+		"@ctx-core/dom": "*",
+		"ctx-core": "*",
+		"svelte": "^4.2.20"
 	},
 	"devDependencies": {
-		"c8": "^10.1.2",
+		"c8": "^10.1.3",
 		"check-dts": "^0.8.2",
-		"tsx": "^4.19.0",
+		"tsx": "^4.20.6",
 		"typescript": "next",
 		"uvu": "^0.5.6"
 	},
